parser.output
Rules useless in parser due to conflicts

   73 unmatched: FOR error


State 1 conflicts: 2 shift/reduce
State 20 conflicts: 1 shift/reduce
State 66 conflicts: 2 reduce/reduce
State 183 conflicts: 2 shift/reduce
State 185 conflicts: 1 shift/reduce
State 187 conflicts: 19 reduce/reduce
State 217 conflicts: 2 shift/reduce
State 219 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declList

    2 declList: declList decl
    3         | decl

    4 decl: varDecl
    5     | funDecl
    6     | error

    7 varDecl: typeSpec varDeclList SEMICOLON
    8        | error varDeclList SEMICOLON
    9        | typeSpec error SEMICOLON

   10 scopedVarDecl: STATIC typeSpec varDeclList SEMICOLON
   11              | typeSpec varDeclList SEMICOLON

   12 varDeclList: varDeclList COMMA varDeclInit
   13            | varDeclList COMMA error
   14            | varDeclInit
   15            | error

   16 varDeclInit: varDeclId
   17            | varDeclId COLON simpleExp
   18            | error COLON simpleExp

   19 varDeclId: ID
   20          | ID LBRACKET NUMCONST RBRACKET
   21          | ID LBRACKET error
   22          | error RBRACKET

   23 typeSpec: INT
   24         | BOOLKW
   25         | CHAR

   26 funDecl: typeSpec ID LPAREN parms RPAREN compoundStmt
   27        | ID LPAREN parms RPAREN compoundStmt
   28        | typeSpec error
   29        | typeSpec ID LPAREN error
   30        | ID LPAREN error
   31        | ID LPAREN parms RPAREN error

   32 parms: parmList
   33      | %empty

   34 parmList: parmList SEMICOLON parmTypeList
   35         | parmTypeList
   36         | parmList SEMICOLON error
   37         | error

   38 parmTypeList: typeSpec parmIdList
   39             | typeSpec error

   40 parmIdList: parmIdList COMMA parmId
   41           | parmId
   42           | parmIdList COMMA error
   43           | error

   44 parmId: ID
   45       | ID LBRACKET RBRACKET

   46 stmt: matched
   47     | unmatched

   48 expStmt: exp SEMICOLON
   49        | SEMICOLON
   50        | error SEMICOLON

   51 compoundStmt: LBRACE localDecls stmtList RBRACE

   52 localDecls: localDecls scopedVarDecl
   53           | %empty

   54 stmtList: stmtList stmt
   55         | %empty

   56 matched: endStmt
   57        | IF simpleExp THEN matched ELSE matched
   58        | IF error
   59        | IF error ELSE matched
   60        | IF error THEN matched ELSE matched
   61        | WHILE simpleExp DO matched
   62        | WHILE error DO matched
   63        | WHILE error
   64        | FOR ID ASGN iterRange DO matched
   65        | FOR ID ASGN error DO matched
   66        | FOR error

   67 unmatched: IF simpleExp THEN matched ELSE unmatched
   68          | IF error THEN matched ELSE unmatched
   69          | WHILE simpleExp DO unmatched
   70          | WHILE error DO unmatched
   71          | FOR ID ASGN iterRange DO unmatched
   72          | FOR ID ASGN error DO unmatched
   73          | FOR error
   74          | IF simpleExp THEN stmt
   75          | IF error THEN matched

   76 endStmt: expStmt
   77        | compoundStmt
   78        | returnStmt
   79        | breakStmt

   80 iterRange: simpleExp TO simpleExp
   81          | simpleExp TO error
   82          | error BY error
   83          | simpleExp TO simpleExp BY error
   84          | simpleExp TO simpleExp BY simpleExp

   85 returnStmt: RETURN SEMICOLON
   86           | RETURN exp SEMICOLON
   87           | RETURN error SEMICOLON

   88 breakStmt: BREAK SEMICOLON

   89 exp: mutable ASGN exp
   90    | error ASGN exp
   91    | mutable ASGN error
   92    | mutable ADDASS exp
   93    | mutable ADDASS error
   94    | mutable SUBASS exp
   95    | mutable SUBASS error
   96    | mutable MULASS exp
   97    | mutable MULASS error
   98    | mutable DIVASS exp
   99    | mutable DIVASS error
  100    | mutable INC
  101    | error INC
  102    | mutable DEC
  103    | error DEC
  104    | simpleExp

  105 simpleExp: simpleExp OR andExp
  106          | simpleExp OR error
  107          | andExp

  108 andExp: andExp AND unaryRelExp
  109       | andExp AND error
  110       | unaryRelExp

  111 unaryRelExp: NOT unaryRelExp
  112            | NOT error
  113            | relExp

  114 relExp: sumExp relop sumExp
  115       | sumExp
  116       | sumExp relop error

  117 relop: LQ
  118      | LEQ
  119      | GQ
  120      | GEQ
  121      | EQ
  122      | NEQ

  123 sumExp: sumExp sumop mulExp
  124       | sumExp sumop error
  125       | mulExp

  126 sumop: PLUS
  127      | MINUS

  128 mulExp: mulExp mulop unaryExp
  129       | mulExp mulop error
  130       | unaryExp

  131 mulop: STAR
  132      | DIV
  133      | MOD

  134 unaryExp: unaryop unaryExp
  135         | unaryop error
  136         | factor

  137 unaryop: MINUS
  138        | STAR
  139        | QMARK

  140 factor: mutable
  141       | immutable

  142 mutable: ID
  143        | ID LBRACKET exp RBRACKET

  144 immutable: LPAREN exp RPAREN
  145          | LPAREN error
  146          | call
  147          | constant

  148 call: ID LPAREN args RPAREN
  149     | error LPAREN

  150 args: argList
  151     | %empty

  152 argList: argList COMMA exp
  153        | exp
  154        | argList COMMA error

  155 constant: NUMCONST
  156         | CHARCONST
  157         | STRINGCONST
  158         | BOOL


Terminals, with rules where they appear

    $end (0) 0
    error (256) 6 8 9 13 15 18 21 22 28 29 30 31 36 37 39 42 43 50 58 59 60 62 63 65 66 68 70 72 73 75 81 82 83 87 90 91 93 95 97 99 101 103 106 109 112 116 124 129 135 145 149 154
    BOOL <tokenData> (258) 158
    NUMCONST <tokenData> (259) 20 155
    CHARCONST <tokenData> (260) 156
    STRINGCONST <tokenData> (261) 157
    ID <tokenData> (262) 19 20 21 26 27 29 30 31 44 45 64 65 71 72 142 143 148
    STATIC <tokenData> (263) 10
    BOOLKW <tokenData> (264) 24
    CHAR <tokenData> (265) 25
    INT <tokenData> (266) 23
    IF <tokenData> (267) 57 58 59 60 67 68 74 75
    THEN <tokenData> (268) 57 60 67 68 74 75
    ELSE <tokenData> (269) 57 59 60 67 68
    WHILE <tokenData> (270) 61 62 63 69 70
    DO <tokenData> (271) 61 62 64 65 69 70 71 72
    FOR <tokenData> (272) 64 65 66 71 72 73
    TO <tokenData> (273) 80 81 83 84
    BY <tokenData> (274) 82 83 84
    RETURN <tokenData> (275) 85 86 87
    BREAK <tokenData> (276) 88
    OR <tokenData> (277) 105 106
    AND <tokenData> (278) 108 109
    NOT <tokenData> (279) 111 112
    NEQ <tokenData> (280) 122
    GEQ <tokenData> (281) 120
    LEQ <tokenData> (282) 118
    INC <tokenData> (283) 100 101
    DEC <tokenData> (284) 102 103
    ADDASS <tokenData> (285) 92 93
    SUBASS <tokenData> (286) 94 95
    MULASS <tokenData> (287) 96 97
    DIVASS <tokenData> (288) 98 99
    ASGN <tokenData> (289) 64 65 71 72 89 90 91
    EQ <tokenData> (290) 121
    LQ <tokenData> (291) 117
    GQ <tokenData> (292) 119
    PLUS <tokenData> (293) 126
    MINUS <tokenData> (294) 127 137
    STAR <tokenData> (295) 131 138
    DIV <tokenData> (296) 132
    MOD <tokenData> (297) 133
    LPAREN <tokenData> (298) 26 27 29 30 31 144 145 148 149
    RPAREN <tokenData> (299) 26 27 31 144 148
    SEMICOLON <tokenData> (300) 7 8 9 10 11 34 36 48 49 50 85 86 87 88
    COMMA <tokenData> (301) 12 13 40 42 152 154
    COLON <tokenData> (302) 17 18
    QMARK <tokenData> (303) 139
    LBRACKET <tokenData> (304) 20 21 45 143
    RBRACKET <tokenData> (305) 20 22 45 143
    LBRACE <tokenData> (306) 51
    RBRACE <tokenData> (307) 51


Nonterminals, with rules where they appear

    $accept (53)
        on left: 0
    program <tree> (54)
        on left: 1
        on right: 0
    declList <tree> (55)
        on left: 2 3
        on right: 1 2
    decl <tree> (56)
        on left: 4 5 6
        on right: 2 3
    varDecl <tree> (57)
        on left: 7 8 9
        on right: 4
    scopedVarDecl <tree> (58)
        on left: 10 11
        on right: 52
    varDeclList <tree> (59)
        on left: 12 13 14 15
        on right: 7 8 10 11 12 13
    varDeclInit <tree> (60)
        on left: 16 17 18
        on right: 12 14
    varDeclId <tree> (61)
        on left: 19 20 21 22
        on right: 16 17
    typeSpec <type> (62)
        on left: 23 24 25
        on right: 7 9 10 11 26 28 29 38 39
    funDecl <tree> (63)
        on left: 26 27 28 29 30 31
        on right: 5
    parms <tree> (64)
        on left: 32 33
        on right: 26 27 31
    parmList <tree> (65)
        on left: 34 35 36 37
        on right: 32 34 36
    parmTypeList <tree> (66)
        on left: 38 39
        on right: 34 35
    parmIdList <tree> (67)
        on left: 40 41 42 43
        on right: 38 40 42
    parmId <tree> (68)
        on left: 44 45
        on right: 40 41
    stmt <tree> (69)
        on left: 46 47
        on right: 54 74
    expStmt <tree> (70)
        on left: 48 49 50
        on right: 76
    compoundStmt <tree> (71)
        on left: 51
        on right: 26 27 77
    localDecls <tree> (72)
        on left: 52 53
        on right: 51 52
    stmtList <tree> (73)
        on left: 54 55
        on right: 51 54
    matched <tree> (74)
        on left: 56 57 58 59 60 61 62 63 64 65 66
        on right: 46 57 59 60 61 62 64 65 67 68 75
    unmatched <tree> (75)
        on left: 67 68 69 70 71 72 73 74 75
        on right: 47 67 68 69 70 71 72
    endStmt <tree> (76)
        on left: 76 77 78 79
        on right: 56
    iterRange <tree> (77)
        on left: 80 81 82 83 84
        on right: 64 71
    returnStmt <tree> (78)
        on left: 85 86 87
        on right: 78
    breakStmt <tree> (79)
        on left: 88
        on right: 79
    exp <tree> (80)
        on left: 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104
        on right: 48 86 89 90 92 94 96 98 143 144 152 153
    simpleExp <tree> (81)
        on left: 105 106 107
        on right: 17 18 57 61 67 69 74 80 81 83 84 104 105 106
    andExp <tree> (82)
        on left: 108 109 110
        on right: 105 107 108 109
    unaryRelExp <tree> (83)
        on left: 111 112 113
        on right: 108 110 111
    relExp <tree> (84)
        on left: 114 115 116
        on right: 113
    relop <tree> (85)
        on left: 117 118 119 120 121 122
        on right: 114 116
    sumExp <tree> (86)
        on left: 123 124 125
        on right: 114 115 116 123 124
    sumop <tree> (87)
        on left: 126 127
        on right: 123 124
    mulExp <tree> (88)
        on left: 128 129 130
        on right: 123 125 128 129
    mulop <tree> (89)
        on left: 131 132 133
        on right: 128 129
    unaryExp <tree> (90)
        on left: 134 135 136
        on right: 128 130 134
    unaryop <tree> (91)
        on left: 137 138 139
        on right: 134 135
    factor <tree> (92)
        on left: 140 141
        on right: 136
    mutable <tree> (93)
        on left: 142 143
        on right: 89 91 92 93 94 95 96 97 98 99 100 102 140
    immutable <tree> (94)
        on left: 144 145 146 147
        on right: 141
    call <tree> (95)
        on left: 148 149
        on right: 146
    args <tree> (96)
        on left: 150 151
        on right: 148
    argList <tree> (97)
        on left: 152 153 154
        on right: 150 152 154
    constant <tree> (98)
        on left: 155 156 157 158
        on right: 147


State 0

    0 $accept: . program $end

    error   shift, and go to state 1
    ID      shift, and go to state 2
    BOOLKW  shift, and go to state 3
    CHAR    shift, and go to state 4
    INT     shift, and go to state 5

    program   go to state 6
    declList  go to state 7
    decl      go to state 8
    varDecl   go to state 9
    typeSpec  go to state 10
    funDecl   go to state 11


State 1

    6 decl: error .
    8 varDecl: error . varDeclList SEMICOLON

    error  shift, and go to state 12
    ID     shift, and go to state 13

    $end    reduce using rule 6 (decl)
    error   [reduce using rule 6 (decl)]
    ID      [reduce using rule 6 (decl)]
    BOOLKW  reduce using rule 6 (decl)
    CHAR    reduce using rule 6 (decl)
    INT     reduce using rule 6 (decl)

    varDeclList  go to state 14
    varDeclInit  go to state 15
    varDeclId    go to state 16


State 2

   27 funDecl: ID . LPAREN parms RPAREN compoundStmt
   30        | ID . LPAREN error
   31        | ID . LPAREN parms RPAREN error

    LPAREN  shift, and go to state 17


State 3

   24 typeSpec: BOOLKW .

    $default  reduce using rule 24 (typeSpec)


State 4

   25 typeSpec: CHAR .

    $default  reduce using rule 25 (typeSpec)


State 5

   23 typeSpec: INT .

    $default  reduce using rule 23 (typeSpec)


State 6

    0 $accept: program . $end

    $end  shift, and go to state 18


State 7

    1 program: declList .
    2 declList: declList . decl

    error   shift, and go to state 1
    ID      shift, and go to state 2
    BOOLKW  shift, and go to state 3
    CHAR    shift, and go to state 4
    INT     shift, and go to state 5

    $end  reduce using rule 1 (program)

    decl      go to state 19
    varDecl   go to state 9
    typeSpec  go to state 10
    funDecl   go to state 11


State 8

    3 declList: decl .

    $default  reduce using rule 3 (declList)


State 9

    4 decl: varDecl .

    $default  reduce using rule 4 (decl)


State 10

    7 varDecl: typeSpec . varDeclList SEMICOLON
    9        | typeSpec . error SEMICOLON
   26 funDecl: typeSpec . ID LPAREN parms RPAREN compoundStmt
   28        | typeSpec . error
   29        | typeSpec . ID LPAREN error

    error  shift, and go to state 20
    ID     shift, and go to state 21

    varDeclList  go to state 22
    varDeclInit  go to state 15
    varDeclId    go to state 16


State 11

    5 decl: funDecl .

    $default  reduce using rule 5 (decl)


State 12

   15 varDeclList: error .
   18 varDeclInit: error . COLON simpleExp
   22 varDeclId: error . RBRACKET

    COLON     shift, and go to state 23
    RBRACKET  shift, and go to state 24

    $default  reduce using rule 15 (varDeclList)


State 13

   19 varDeclId: ID .
   20          | ID . LBRACKET NUMCONST RBRACKET
   21          | ID . LBRACKET error

    LBRACKET  shift, and go to state 25

    $default  reduce using rule 19 (varDeclId)


State 14

    8 varDecl: error varDeclList . SEMICOLON
   12 varDeclList: varDeclList . COMMA varDeclInit
   13            | varDeclList . COMMA error

    SEMICOLON  shift, and go to state 26
    COMMA      shift, and go to state 27


State 15

   14 varDeclList: varDeclInit .

    $default  reduce using rule 14 (varDeclList)


State 16

   16 varDeclInit: varDeclId .
   17            | varDeclId . COLON simpleExp

    COLON  shift, and go to state 28

    $default  reduce using rule 16 (varDeclInit)


State 17

   27 funDecl: ID LPAREN . parms RPAREN compoundStmt
   30        | ID LPAREN . error
   31        | ID LPAREN . parms RPAREN error

    error   shift, and go to state 29
    BOOLKW  shift, and go to state 3
    CHAR    shift, and go to state 4
    INT     shift, and go to state 5

    RPAREN  reduce using rule 33 (parms)

    typeSpec      go to state 30
    parms         go to state 31
    parmList      go to state 32
    parmTypeList  go to state 33


State 18

    0 $accept: program $end .

    $default  accept


State 19

    2 declList: declList decl .

    $default  reduce using rule 2 (declList)


State 20

    9 varDecl: typeSpec error . SEMICOLON
   15 varDeclList: error .
   18 varDeclInit: error . COLON simpleExp
   22 varDeclId: error . RBRACKET
   28 funDecl: typeSpec error .

    SEMICOLON  shift, and go to state 34
    COLON      shift, and go to state 23
    RBRACKET   shift, and go to state 24

    SEMICOLON  [reduce using rule 15 (varDeclList)]
    COMMA      reduce using rule 15 (varDeclList)
    $default   reduce using rule 28 (funDecl)


State 21

   19 varDeclId: ID .
   20          | ID . LBRACKET NUMCONST RBRACKET
   21          | ID . LBRACKET error
   26 funDecl: typeSpec ID . LPAREN parms RPAREN compoundStmt
   29        | typeSpec ID . LPAREN error

    LPAREN    shift, and go to state 35
    LBRACKET  shift, and go to state 25

    $default  reduce using rule 19 (varDeclId)


State 22

    7 varDecl: typeSpec varDeclList . SEMICOLON
   12 varDeclList: varDeclList . COMMA varDeclInit
   13            | varDeclList . COMMA error

    SEMICOLON  shift, and go to state 36
    COMMA      shift, and go to state 27


State 23

   18 varDeclInit: error COLON . simpleExp

    error        shift, and go to state 37
    BOOL         shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ID           shift, and go to state 42
    NOT          shift, and go to state 43
    MINUS        shift, and go to state 44
    STAR         shift, and go to state 45
    LPAREN       shift, and go to state 46
    QMARK        shift, and go to state 47

    simpleExp    go to state 48
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    factor       go to state 56
    mutable      go to state 57
    immutable    go to state 58
    call         go to state 59
    constant     go to state 60


State 24

   22 varDeclId: error RBRACKET .

    $default  reduce using rule 22 (varDeclId)


State 25

   20 varDeclId: ID LBRACKET . NUMCONST RBRACKET
   21          | ID LBRACKET . error

    error     shift, and go to state 61
    NUMCONST  shift, and go to state 62


State 26

    8 varDecl: error varDeclList SEMICOLON .

    $default  reduce using rule 8 (varDecl)


State 27

   12 varDeclList: varDeclList COMMA . varDeclInit
   13            | varDeclList COMMA . error

    error  shift, and go to state 63
    ID     shift, and go to state 13

    varDeclInit  go to state 64
    varDeclId    go to state 16


State 28

   17 varDeclInit: varDeclId COLON . simpleExp

    error        shift, and go to state 37
    BOOL         shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ID           shift, and go to state 42
    NOT          shift, and go to state 43
    MINUS        shift, and go to state 44
    STAR         shift, and go to state 45
    LPAREN       shift, and go to state 46
    QMARK        shift, and go to state 47

    simpleExp    go to state 65
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    factor       go to state 56
    mutable      go to state 57
    immutable    go to state 58
    call         go to state 59
    constant     go to state 60


State 29

   30 funDecl: ID LPAREN error .
   37 parmList: error .

    RPAREN     reduce using rule 37 (parmList)
    SEMICOLON  reduce using rule 37 (parmList)
    $default   reduce using rule 30 (funDecl)


State 30

   38 parmTypeList: typeSpec . parmIdList
   39             | typeSpec . error

    error  shift, and go to state 66
    ID     shift, and go to state 67

    parmIdList  go to state 68
    parmId      go to state 69


State 31

   27 funDecl: ID LPAREN parms . RPAREN compoundStmt
   31        | ID LPAREN parms . RPAREN error

    RPAREN  shift, and go to state 70


State 32

   32 parms: parmList .
   34 parmList: parmList . SEMICOLON parmTypeList
   36         | parmList . SEMICOLON error

    SEMICOLON  shift, and go to state 71

    $default  reduce using rule 32 (parms)


State 33

   35 parmList: parmTypeList .

    $default  reduce using rule 35 (parmList)


State 34

    9 varDecl: typeSpec error SEMICOLON .

    $default  reduce using rule 9 (varDecl)


State 35

   26 funDecl: typeSpec ID LPAREN . parms RPAREN compoundStmt
   29        | typeSpec ID LPAREN . error

    error   shift, and go to state 72
    BOOLKW  shift, and go to state 3
    CHAR    shift, and go to state 4
    INT     shift, and go to state 5

    RPAREN  reduce using rule 33 (parms)

    typeSpec      go to state 30
    parms         go to state 73
    parmList      go to state 32
    parmTypeList  go to state 33


State 36

    7 varDecl: typeSpec varDeclList SEMICOLON .

    $default  reduce using rule 7 (varDecl)


State 37

  149 call: error . LPAREN

    LPAREN  shift, and go to state 74


State 38

  158 constant: BOOL .

    $default  reduce using rule 158 (constant)


State 39

  155 constant: NUMCONST .

    $default  reduce using rule 155 (constant)


State 40

  156 constant: CHARCONST .

    $default  reduce using rule 156 (constant)


State 41

  157 constant: STRINGCONST .

    $default  reduce using rule 157 (constant)


State 42

  142 mutable: ID .
  143        | ID . LBRACKET exp RBRACKET
  148 call: ID . LPAREN args RPAREN

    LPAREN    shift, and go to state 75
    LBRACKET  shift, and go to state 76

    $default  reduce using rule 142 (mutable)


State 43

  111 unaryRelExp: NOT . unaryRelExp
  112            | NOT . error

    error        shift, and go to state 77
    BOOL         shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ID           shift, and go to state 42
    NOT          shift, and go to state 43
    MINUS        shift, and go to state 44
    STAR         shift, and go to state 45
    LPAREN       shift, and go to state 46
    QMARK        shift, and go to state 47

    unaryRelExp  go to state 78
    relExp       go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    factor       go to state 56
    mutable      go to state 57
    immutable    go to state 58
    call         go to state 59
    constant     go to state 60


State 44

  137 unaryop: MINUS .

    $default  reduce using rule 137 (unaryop)


State 45

  138 unaryop: STAR .

    $default  reduce using rule 138 (unaryop)


State 46

  144 immutable: LPAREN . exp RPAREN
  145          | LPAREN . error

    error        shift, and go to state 79
    BOOL         shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ID           shift, and go to state 42
    NOT          shift, and go to state 43
    MINUS        shift, and go to state 44
    STAR         shift, and go to state 45
    LPAREN       shift, and go to state 46
    QMARK        shift, and go to state 47

    exp          go to state 80
    simpleExp    go to state 81
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    factor       go to state 56
    mutable      go to state 82
    immutable    go to state 58
    call         go to state 59
    constant     go to state 60


State 47

  139 unaryop: QMARK .

    $default  reduce using rule 139 (unaryop)


State 48

   18 varDeclInit: error COLON simpleExp .
  105 simpleExp: simpleExp . OR andExp
  106          | simpleExp . OR error

    OR  shift, and go to state 83

    $default  reduce using rule 18 (varDeclInit)


State 49

  107 simpleExp: andExp .
  108 andExp: andExp . AND unaryRelExp
  109       | andExp . AND error

    AND  shift, and go to state 84

    $default  reduce using rule 107 (simpleExp)


State 50

  110 andExp: unaryRelExp .

    $default  reduce using rule 110 (andExp)


State 51

  113 unaryRelExp: relExp .

    $default  reduce using rule 113 (unaryRelExp)


State 52

  114 relExp: sumExp . relop sumExp
  115       | sumExp .
  116       | sumExp . relop error
  123 sumExp: sumExp . sumop mulExp
  124       | sumExp . sumop error

    NEQ    shift, and go to state 85
    GEQ    shift, and go to state 86
    LEQ    shift, and go to state 87
    EQ     shift, and go to state 88
    LQ     shift, and go to state 89
    GQ     shift, and go to state 90
    PLUS   shift, and go to state 91
    MINUS  shift, and go to state 92

    $default  reduce using rule 115 (relExp)

    relop  go to state 93
    sumop  go to state 94


State 53

  125 sumExp: mulExp .
  128 mulExp: mulExp . mulop unaryExp
  129       | mulExp . mulop error

    STAR  shift, and go to state 95
    DIV   shift, and go to state 96
    MOD   shift, and go to state 97

    $default  reduce using rule 125 (sumExp)

    mulop  go to state 98


State 54

  130 mulExp: unaryExp .

    $default  reduce using rule 130 (mulExp)


State 55

  134 unaryExp: unaryop . unaryExp
  135         | unaryop . error

    error        shift, and go to state 99
    BOOL         shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ID           shift, and go to state 42
    MINUS        shift, and go to state 44
    STAR         shift, and go to state 45
    LPAREN       shift, and go to state 46
    QMARK        shift, and go to state 47

    unaryExp   go to state 100
    unaryop    go to state 55
    factor     go to state 56
    mutable    go to state 57
    immutable  go to state 58
    call       go to state 59
    constant   go to state 60


State 56

  136 unaryExp: factor .

    $default  reduce using rule 136 (unaryExp)


State 57

  140 factor: mutable .

    $default  reduce using rule 140 (factor)


State 58

  141 factor: immutable .

    $default  reduce using rule 141 (factor)


State 59

  146 immutable: call .

    $default  reduce using rule 146 (immutable)


State 60

  147 immutable: constant .

    $default  reduce using rule 147 (immutable)


State 61

   21 varDeclId: ID LBRACKET error .

    $default  reduce using rule 21 (varDeclId)


State 62

   20 varDeclId: ID LBRACKET NUMCONST . RBRACKET

    RBRACKET  shift, and go to state 101


State 63

   13 varDeclList: varDeclList COMMA error .
   18 varDeclInit: error . COLON simpleExp
   22 varDeclId: error . RBRACKET

    COLON     shift, and go to state 23
    RBRACKET  shift, and go to state 24

    $default  reduce using rule 13 (varDeclList)


State 64

   12 varDeclList: varDeclList COMMA varDeclInit .

    $default  reduce using rule 12 (varDeclList)


State 65

   17 varDeclInit: varDeclId COLON simpleExp .
  105 simpleExp: simpleExp . OR andExp
  106          | simpleExp . OR error

    OR  shift, and go to state 83

    $default  reduce using rule 17 (varDeclInit)


State 66

   39 parmTypeList: typeSpec error .
   43 parmIdList: error .

    RPAREN     reduce using rule 39 (parmTypeList)
    RPAREN     [reduce using rule 43 (parmIdList)]
    SEMICOLON  reduce using rule 39 (parmTypeList)
    SEMICOLON  [reduce using rule 43 (parmIdList)]
    COMMA      reduce using rule 43 (parmIdList)
    $default   reduce using rule 39 (parmTypeList)


State 67

   44 parmId: ID .
   45       | ID . LBRACKET RBRACKET

    LBRACKET  shift, and go to state 102

    $default  reduce using rule 44 (parmId)


State 68

   38 parmTypeList: typeSpec parmIdList .
   40 parmIdList: parmIdList . COMMA parmId
   42           | parmIdList . COMMA error

    COMMA  shift, and go to state 103

    $default  reduce using rule 38 (parmTypeList)


State 69

   41 parmIdList: parmId .

    $default  reduce using rule 41 (parmIdList)


State 70

   27 funDecl: ID LPAREN parms RPAREN . compoundStmt
   31        | ID LPAREN parms RPAREN . error

    error   shift, and go to state 104
    LBRACE  shift, and go to state 105

    compoundStmt  go to state 106


State 71

   34 parmList: parmList SEMICOLON . parmTypeList
   36         | parmList SEMICOLON . error

    error   shift, and go to state 107
    BOOLKW  shift, and go to state 3
    CHAR    shift, and go to state 4
    INT     shift, and go to state 5

    typeSpec      go to state 30
    parmTypeList  go to state 108


State 72

   29 funDecl: typeSpec ID LPAREN error .
   37 parmList: error .

    RPAREN     reduce using rule 37 (parmList)
    SEMICOLON  reduce using rule 37 (parmList)
    $default   reduce using rule 29 (funDecl)


State 73

   26 funDecl: typeSpec ID LPAREN parms . RPAREN compoundStmt

    RPAREN  shift, and go to state 109


State 74

  149 call: error LPAREN .

    $default  reduce using rule 149 (call)


State 75

  148 call: ID LPAREN . args RPAREN

    error        shift, and go to state 110
    BOOL         shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ID           shift, and go to state 42
    NOT          shift, and go to state 43
    MINUS        shift, and go to state 44
    STAR         shift, and go to state 45
    LPAREN       shift, and go to state 46
    QMARK        shift, and go to state 47

    RPAREN  reduce using rule 151 (args)

    exp          go to state 111
    simpleExp    go to state 81
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    factor       go to state 56
    mutable      go to state 82
    immutable    go to state 58
    call         go to state 59
    args         go to state 112
    argList      go to state 113
    constant     go to state 60


State 76

  143 mutable: ID LBRACKET . exp RBRACKET

    error        shift, and go to state 110
    BOOL         shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ID           shift, and go to state 42
    NOT          shift, and go to state 43
    MINUS        shift, and go to state 44
    STAR         shift, and go to state 45
    LPAREN       shift, and go to state 46
    QMARK        shift, and go to state 47

    exp          go to state 114
    simpleExp    go to state 81
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    factor       go to state 56
    mutable      go to state 82
    immutable    go to state 58
    call         go to state 59
    constant     go to state 60


State 77

  112 unaryRelExp: NOT error .
  149 call: error . LPAREN

    LPAREN  shift, and go to state 74

    $default  reduce using rule 112 (unaryRelExp)


State 78

  111 unaryRelExp: NOT unaryRelExp .

    $default  reduce using rule 111 (unaryRelExp)


State 79

   90 exp: error . ASGN exp
  101    | error . INC
  103    | error . DEC
  145 immutable: LPAREN error .
  149 call: error . LPAREN

    INC     shift, and go to state 115
    DEC     shift, and go to state 116
    ASGN    shift, and go to state 117
    LPAREN  shift, and go to state 74

    $default  reduce using rule 145 (immutable)


State 80

  144 immutable: LPAREN exp . RPAREN

    RPAREN  shift, and go to state 118


State 81

  104 exp: simpleExp .
  105 simpleExp: simpleExp . OR andExp
  106          | simpleExp . OR error

    OR  shift, and go to state 83

    $default  reduce using rule 104 (exp)


State 82

   89 exp: mutable . ASGN exp
   91    | mutable . ASGN error
   92    | mutable . ADDASS exp
   93    | mutable . ADDASS error
   94    | mutable . SUBASS exp
   95    | mutable . SUBASS error
   96    | mutable . MULASS exp
   97    | mutable . MULASS error
   98    | mutable . DIVASS exp
   99    | mutable . DIVASS error
  100    | mutable . INC
  102    | mutable . DEC
  140 factor: mutable .

    INC     shift, and go to state 119
    DEC     shift, and go to state 120
    ADDASS  shift, and go to state 121
    SUBASS  shift, and go to state 122
    MULASS  shift, and go to state 123
    DIVASS  shift, and go to state 124
    ASGN    shift, and go to state 125

    $default  reduce using rule 140 (factor)


State 83

  105 simpleExp: simpleExp OR . andExp
  106          | simpleExp OR . error

    error        shift, and go to state 126
    BOOL         shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ID           shift, and go to state 42
    NOT          shift, and go to state 43
    MINUS        shift, and go to state 44
    STAR         shift, and go to state 45
    LPAREN       shift, and go to state 46
    QMARK        shift, and go to state 47

    andExp       go to state 127
    unaryRelExp  go to state 50
    relExp       go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    factor       go to state 56
    mutable      go to state 57
    immutable    go to state 58
    call         go to state 59
    constant     go to state 60


State 84

  108 andExp: andExp AND . unaryRelExp
  109       | andExp AND . error

    error        shift, and go to state 128
    BOOL         shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ID           shift, and go to state 42
    NOT          shift, and go to state 43
    MINUS        shift, and go to state 44
    STAR         shift, and go to state 45
    LPAREN       shift, and go to state 46
    QMARK        shift, and go to state 47
